[gd_scene format=3 uid="uid://bsu4iagqsokc3"]

[ext_resource type="Script" uid="uid://cih80df8wc8g3" path="res://scripts/tooltip_manager.gd" id="1_tooltip"]

[node name="TooltipManager" type="Control" unique_id=332736824]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_tooltip")

[node name="TooltipPanel" type="Panel" parent="." unique_id=1734932382]
layout_mode = 1
offset_left = 100.0
offset_top = 100.0
offset_right = 300.0
offset_bottom = 200.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TooltipPanel" unique_id=1489301539]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="TooltipPanel/VBoxContainer" unique_id=1973765022]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Card Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="TooltipPanel/VBoxContainer" unique_id=625504011]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="TooltipPanel/VBoxContainer" unique_id=1416327324]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="DescLabel" type="Label" parent="TooltipPanel/VBoxContainer/Margin" unique_id=667473163]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 24
text = "Card Description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
